--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,3 +12,5 @@ services:
       MYSQL_PASSWORD: password
     ports:
       - "3307:3306"
+    volumes:
+      - /mnt/wsl/mysql-data:/var/lib/mysql
