--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,21 @@ services:
       - "8080:8080"
     network:
       - meal-network1
+  db:
+    image: mysql:latest
+    container_name: mysql-container
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: dbname
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3307:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+    network:
+      - meal-network1
+
+volumes:
+  mysql-data:
