--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '3'
+version: '3.7'
+
 services:
   meal-api:
-    image: openjdk:11-jre-slim
+    image: openjdk:17-jdk-alpine
     volumes:
       - ./target/meMealsApi-0.0.1-SNAPSHOT.jar:/app.jar
     command: ["java", "-jar", "/app.jar"]
