--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,7 +7,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: dbname
+      MYSQL_DATABASE: meMeals
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
