--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/meMeals
+    url: jdbc:mysql://db:3306/meMeals
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
