--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,7 @@ services:
     restart: always
     ports:
       - "8080:8080"
+      - "5005:5005" # Expose the debugging port
     depends_on:
       - db
     networks:
