--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
     container_name: mysql-container
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${secrets.DB_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: $DB_ROOT_PASSWORD
+      MYSQL_USER: $DB_USER
+      MYSQL_PASSWORD: $DB_PASSWORD
       MYSQL_DATABASE: meMeals
-      MYSQL_USER: ${secrets.DB_USER}
-      MYSQL_PASSWORD: ${secrets.DB_PASSWORD}
     ports:
       - "3307:3306"
+    command: '--default-authentication-plugin=mysql_native_password' 
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
